# censusdis-tutorial-2024

./: .gitignore  README.md  check-environment.py  pyproject.toml  requirements.txt
Exercises/: Exercise 1.ipynb  Exercise 2.ipynb  Exercise 3.ipynb  Exercise 4.ipynb  Exercise 5.ipynb
Exercises/Solutions/: Solutions 1.ipynb  Solutions 2.ipynb  Solutions 3.ipynb  Solutions 4.ipynb  Solutions 5.ipynb
Lessons/: Lesson 0 Introduction.ipynb  Lesson 1 Basic Queries.ipynb  Lesson 2 Maps.ipynb  Lesson 3 Variables.ipynb  Lesson 4 Query Filters.ipynb  Lesson 5 Query Filters.ipynb  Lesson n Final Thoughts.ipynb
Projects/: Final Project Ideas 1.ipynb  Final Project Ideas 2.ipynb  Project Presentations.ipynb
scipy24/: description.md  outline.md
