[tool.poetry]
name = "censusdis-tutorial-2024"
version = "0.1.0"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"
packages = [{include = "censusdis_tutorial_2024"}]

[tool.poetry.dependencies]
python = "^3.11"
censusdis = "^1.1.9"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.14"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.isort]
profile = "black"
